# Django_TODO_App

./: db.sqlite3  pyproject.toml
Main/: settings.py  urls.py
base/: models.py  urls.py  views.py
base/migrations/: 0001_initial.py
base/templates/base/: Login.html  TaskCreateView.html  TaskDeailView.html  TaskDelete.html  TaskDetailView.html  TaskListView.html  register.html
