[project]
name = "todo-app"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "shiamsharif",email = "shiam.sharif.07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "pipenv lock _requirements > requirements"}]


[tool.poetry.dependencies]
django = "*"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
